<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">蓝莓</string>
    <string name="app_url"><a href="http://1886.me">1886.me</a></string>

    <!-- AndroidLockPattern -->
    <string name="alp_lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="alp_lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="alp_lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="alp_lockscreen_access_pattern_start">Pattern started</string>

    <!-- General -->
    <string name="phone_number">手机号码</string>
    <string name="account">账\t\t号</string>
    <string name="password">密\t\t码</string>
    <string name="okay">确定</string>
    <string name="quit">放弃</string>
    <string name="cancel">取消</string>
    <string name="done">完成</string>
    <string name="settings">设置</string>
    <string name="more">更多</string>
    <string name="use_camera">使用相机</string>
    <string name="select_album">选择相册</string>
    <string name="server_error">服务器错误</string>
    <string name="server_object_error">服务器返回对象解析错误</string>
    <string name="feedback">意见反馈</string>
    <string name="create">创建</string>
    <string name="report">举报</string>
    <string name="like">点赞</string>
    <string name="unlike">取消赞</string>
    <string name="delete">删除</string>
    <string name="share">分享</string>

    <!-- Locate -->
    <string name="locating">定位中…</string>
    <string name="locating_failed">定位失败</string>

    <!-- Action -->
    <string name="action_settings">@string/settings</string>


    <!-- ContentDescription -->
    <string name="cd_action_overflow">action_overflow</string>
    <string name="cd_action_left">action_left</string>


    <!-- IntroActivity -->
    <string name="intro_1">劳动者自己的匿名工友圈</string>
    <string name="intro_2">介绍人发给你的手势密码</string>
    <string name="get_pattern">获取手势密码</string>
    <string name="other_login">其他账号登录</string>
    <string name="wrong_pattern">解锁手势输入错误</string>


    <!-- RegisterActivity -->
    <string name="register_phone_intro">手机号仅用来识别你厂里认识的人</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功</string>


    <!-- ForgetPwdActivity -->
    <string name="receiving_captcha">你的手机%s会收到一条4位数字的验证码的短信</string>
    <string name="get_captcha">获取验证码</string>
    <string name="reget_captcha">重新发送(%s)</string>
    <string name="find_password">找回密码</string>
    <string name="captcha">验证码</string>
    <string name="set_new_pwd">设置新密码</string>
    <string name="request_success">请求成功，你将收到验证码短信</string>
    <string name="new_pwd_set">成功修改密码</string>


    <!-- LoginActivity -->
    <string name="login">登录</string>
    <string name="wrong_password">密码错误</string>
    <string name="wrong_phone_number">手机号没有注册</string>
    <string name="login_failed">登录失败</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="login_success">登录成功</string>


    <!-- ImportContactActivity -->
    <string name="find_friend">寻找朋友</string>
    <string name="import_contact_1">通讯录里的朋友，现在都在哪个厂上班？他们正在这些厂里匿名说什么？</string>
    <string name="import_contact_2">通过手机通讯录，找出和你一个厂的朋友</string>
    <string name="import_contact_3">是认识的人，为什么还要匿名</string>


    <!-- GetLockpatternActivity -->
    <string name="get_lock_pattern">获取手势密码</string>
    <string name="get_lockpattern_1">1886是一个私密的，需要邀请的劳动者匿名社区。如果你没有朋友的介绍，是不能进入的！</string>
    <string name="get_lockpattern_2">向1886里的熟人索取手势密码</string>
    <string name="start_find">开始查找</string>

    <!-- PostActivity -->
    <string name="post">发表</string>
    <string name="who_will_see_this_secret">谁会看到这条秘密</string>
    <string name="add_photo">添加照片</string>
    <string name="post_description">你在厂里的朋友会看到这条秘密，并知道是厂里面认识的人发的，但是无法猜到谁是作者。\n\n如果秘密被赞的数量较多，将自动转发到其他打工圈，让更多的人看到！</string>
    <string name="got_it">知道啦</string>
    <string name="post_anonymously">匿名发表秘密或小心情</string>
    <string name="shuffle_bg_color">随机切换一种色彩</string>
    <string name="post_over_length">内容不能超过140个字</string>
    <string name="quit_confirm">有内容未发布，确认放弃？</string>
    <string name="resume_editing">继续编辑</string>
    <string name="error_start_camera">启动相机应用错误</string>
    <string name="error_start_album">无法选择相册图片</string>
    <string name="send_succeed">发送成功</string>
    <string name="cannot_post_empty_content">不能发表空内容。</string>


    <!-- MyCirclesActivity -->
    <string name="search_circles">找工厂，找商圈，找企业</string>
    <string name="my_circles">我的工友圈</string>
    <string name="no_circles">没有找到工友圈</string>

    <!-- CircleSearchActivity -->
    <string name="enter_search_keyword">请输入搜索内容</string>
    <string name="clear_search_history">清除搜索记录</string>
    <string name="no_search_result">没有找到 “%s” 相关的工友圈</string>
    <string name="try_other_search_keyword">你可以尝试更改搜索关键词，或申请创建工友圈</string>
    <string name="create_circle">创建工友圈</string>

    <!-- CircleCreateActivity -->
    <string name="circle_full_name">工友圈全称</string>
    <string name="circle_abbreviation">工友圈短名称</string>
    <string name="current_location">当前位置</string>
    <string name="enter_captcha">输入验证码</string>
    <string name="change_captcha">换一张</string>
    <string name="invite_people">邀请好友进入（需要3个朋友加入，才可以开通）</string>
    <string name="circle_name_length_long">工友圈名字太长</string>
    <string name="circle_short_name_length_long">工友圈短名称太长</string>
    <string name="pull_to_refresh">下拉刷新</string>

    <!-- FeedActivity -->
    <string name="select_circle">选择工友圈</string>
    <string name="friends_info">朋友(%1$d) | 工友(%2$d)</string>
    <string name="hidden_friends_feed">朋友发的%1$d条匿名贴被隐藏</string>
    <string name="unlock_to_view">解锁查看</string>
    <string name="introduce_to_friends">介绍给朋友</string>

    <!-- PostActivity -->
    <string name="comment">评论</string>
    <string name="anonymously_comment">匿名发表评论</string>
    <string name="about">蓝莓的故事</string>
    <string name="comment_action">评论操作</string>
    <string name="post_action">帖子操作</string>
</resources>