<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
            android:id="@+id/page_1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_gravity="center_horizontal"
                android:phoneNumber="true"
                android:hint="@string/phone_number"/>

        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_password"
                android:id="@+id/button"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/page_2"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receiving_captcha"
                android:id="@+id/textView"/>

        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText2"
                android:hint="@string/captcha"
                android:layout_marginTop="15dp"/>

        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/okay"
                android:id="@+id/button2"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/page_3"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone">

        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText3"
                android:hint="@string/set_password"/>

        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:id="@+id/button3"
                android:layout_marginTop="15dp"/>
    </LinearLayout>
</FrameLayout>