<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/import_contact_1"
            android:textSize="22sp"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:background="@color/apptheme_secondary_light_color"
            android:paddingLeft="30dp"
            android:paddingTop="35dp"
            android:paddingRight="30dp"
            android:paddingBottom="60dp"
            android:textColor="@android:color/white"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_contact_2"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:textSize="12sp"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_friend"
            android:id="@+id/button_import_contact"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_contact_3"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textSize="12sp"
            android:textColor="@color/apptheme_primary_light_color"/>
</LinearLayout>