<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/big_logo"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/bpush_gray_logo"
            android:layout_marginTop="40dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/app_title"
            android:layout_gravity="center_horizontal"
            android:textSize="42dp"
            android:layout_marginTop="20dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/intro_text"
            android:layout_gravity="center_horizontal"
            android:text="@string/intro_1"
            android:layout_marginTop="5dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/app_url"
            android:id="@+id/intro_url"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="bottom"
            android:layout_marginBottom="10dp"
            android:autoLink="web"/>
</LinearLayout>