<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/get_lockpattern_1"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:background="@color/apptheme_secondary_light_color"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="35dp"
            android:paddingBottom="60dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_lockpattern_2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_find"
            android:id="@+id/btn_start_find"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="15dp"/>
</LinearLayout>