<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin">

    <include layout="@layout/widget_phone_number"/>

    <include layout="@layout/widget_pwd"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/btn_register"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:enabled="false"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_phone_intro"
            android:id="@+id/textView"
            android:textColor="@color/apptheme_primary_dark_color"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/tv_login"
            android:layout_gravity="right"
            android:layout_marginTop="25dp"
            android:textColor="@color/primary_green_text_color"
            android:layout_marginBottom="2dp"/>
</LinearLayout>