<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingBottom="@dimen/activity_vertical_margin">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/et_phone_number"
            android:layout_gravity="center_horizontal"
            android:hint="@string/phone_number"
            android:singleLine="true"
            android:numeric="integer"
            android:minLines="1"
            android:imeOptions="actionNext"
            tools:ignore="TextFields"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/et_pwd"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:selectAllOnFocus="true"
            android:imeOptions="actionGo"
            android:imeActionLabel="@string/login"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/btn_login"
            android:enabled="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"/>
</LinearLayout>